# python-simulate

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FILE_MANIFEST.txt  FIX_PACKAGE_README_1_4_6_HF1.md  MANIFEST.in  Makefile  README.md  RELEASING.md  SOLVER_STRATEGY_ANALYSIS.md  VERSION_FULL_REPLACEMENT.txt  VERSION_NOTES_v0.1.29.md  VERSION_NOTES_v0.1.30.md  VERSION_NOTES_v0.1.31.md  VERSION_NOTES_v0.1.33.md  VERSION_NOTES_v0.1.34.md  VERSION_NOTES_v0.1.35.md  VERSION_NOTES_v0.1.36.md  VERSION_NOTES_v0.1.37.md  VERSION_NOTES_v0.1.38.md  VERSION_NOTES_v0.1.39.md  VERSION_NOTES_v0.1.40.md  VERSION_NOTES_v0.1.41.md  VERSION_NOTES_v0.1.42.md  WARP_CUDA_CONFIG.md  casepath.txt  export_interface_elements.out  inspect.json  inspect_auto.json  interface_elements.json  pit_case.json  pit_case_auto_split.json  pyproject.toml  requirements-dev.txt  requirements-meshing.txt  requirements-solver.txt  requirements-ui.txt  requirements-warp.txt  requirements.txt  (+7 more)
.runtime_checkpoints/: stage-000.json  stage-000.npz  stage-001.json
docs/: COMPLETION_MATRIX.generated.json  COMPLETION_MATRIX.generated.md  COMPLETION_MATRIX.md  FEM_CORE_ARCHITECTURE.md  FEM_SCOPE_AND_ROADMAP.md  INTEGRATED_VISUAL_MODELING_SYSTEM.md  ITERATION_0_8_35_CORE_FEM_HARDENING.md  ITERATION_0_8_36_OPERATION_PAGES_NUMERICAL_MATRIX.md  ITERATION_0_8_42_SYSTEM_REPAIR_AND_GUI_HARDENING.md  ITERATION_0_8_43_MODERN_GEOMETRY_EDITOR.md  ITERATION_0_8_44_INTERACTIVE_GEOMETRY_EDITOR.md  ITERATION_0_8_45_ENGINEERING_MODELING_TOOLS.md  ITERATION_0_8_47_GEOPROJECT_DOCUMENT.md  ITERATION_0_8_48_GEOPROJECT_GUI_DATASOURCE.md  ITERATION_0_8_49_GEOPROJECT_NATIVE_WORKFLOW.md  ITERATION_0_8_50_INCREMENTAL_SOLVER_AND_ROOT_GUI.md  ITERATION_0_8_51_STL_GEOLOGY_LOADER.md  ITERATION_0_8_52_RUNTIME_AND_STAGE_COMMANDS.md  ITERATION_0_8_53_MODULAR_CONTRACTS_AND_SERVICES.md  ITERATION_0_8_54_P2_P3_P4_MODULARIZATION.md  ITERATION_0_8_56_P0_P4_COMPLETION.md  ITERATION_0_8_70_TYPED_CONTRACTS_GUI_SLIMMING.md  ITERATION_0_8_72_COMPLETE_MODULARIZATION.md  ITERATION_0_8_73_MODULE_OPTIMIZATION_READINESS.md  ITERATION_0_8_76_REAL_STL_GEOMETRY_KERNEL.md  ITERATION_0_8_77_PRODUCTION_GMSH_OCC_AND_GEOMETRY_LOGGING.md  ITERATION_0_8_78_GUI_DEBUG_AND_GMSH_REQUIREMENTS.md  MODULE_ARCHITECTURE.md  PARAMETRIC_EDITING_AND_BINDING_MIGRATION.md  STATUS_TERMS.md  VISUAL_MODELING_ARCHITECTURE.md  core_fem_smoke_results.json  distributed_gpu_fem_blueprint_v4.md
exports_root/: pit_demo.vtu
exports_v3/: pit_demo.vtu
exports_v6/: pit_demo.vtu
reports/: parametric_editing_binding_migration_smoke.json
tests/: conftest.py  test_borehole_csv_importer.py  test_boundary_presets.py  test_case_service_workbench.py  test_cli_case_commands.py  test_cli_case_inspect_validate.py  test_cli_release_ready.py  test_cli_stage_graph_case.py  test_cli_workbench_case.py  test_commercial_controls.py  test_compute_preferences.py  test_compute_preferences_selected_gpus.py  test_demo_continuum_connectivity.py  test_demo_full_run.py  test_demo_interface_auto.py  test_demo_pit_upgrade.py  test_demo_pit_workflow.py  test_demo_runtime_profiles.py  test_demo_solver_compatibility.py  test_demo_stage_fallback_resume.py  test_env_check_actions.py  test_geometry_first_mesh_engine.py  test_gpu_block_matrix_cpu_fallback.py  test_gpu_runtime_selection.py  test_gui_hotfix_picking_contract.py  test_hybrid_gpu_block_merge.py  test_ifc_suggestions.py  test_layer_surface_meshing.py  test_layered_mesh_workflow_command.py  test_line_search_shapes.py  test_linear_algebra.py  test_linear_algebra_advanced.py  test_linear_hex8.py  test_linear_tet4.py  test_main_window_gpu_methods.py  test_material_models.py  test_mesh_check_quality.py  test_nonlinear_continuum_cache.py  test_nonlinear_convergence_guards.py  test_object_transform.py  (+50 more)
tools/: _no_install_bootstrap.py  check_gui_action_flow.py  check_gui_env.py  check_status_terms.py  run_block_pit_workflow_smoke.py  run_core_fem_smoke.py  run_engineering_modeling_tools_smoke.py  run_foundation_pit_demo.py  run_geoai_simkit.py  run_geometry_editor_smoke.py  run_geoproject_gui_datasource_smoke.py  run_geoproject_incremental_solver_smoke.py  run_geoproject_native_workflow_smoke.py  run_gui_no_install.bat  run_gui_no_install.command  run_import_driven_assembly.py  run_mouse_geometry_interaction_smoke.py  run_native_import_assembly.py  run_pit_tet4_stage_smoke.py  (+13 more)
(+952 files in other folders)
