[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoai-simkit"
version = "1.7.4"
description = "GeoAI SimKit unified import-driven GUI workflow with legacy entrypoints removed and explicit action state"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10", "typing_extensions>=4.8", "PySide6>=6.5", "QtPy>=2.4", "vtk>=9.2", "pyvista>=0.43", "pyvistaqt>=0.11", "gmsh>=4.11", "meshio>=5.3", "cadquery-ocp>=7.7", "ifcopenshell>=0.8", "matplotlib>=3.7", "pillow>=10", "pooch>=1.8", "scooby>=0.10", "packaging>=23", "requests>=2.31", "rich>=13", "pytest>=8"]


[project.optional-dependencies]
solver = ["scipy>=1.10"]
gui = ["PySide6>=6.5", "QtPy>=2.4", "vtk>=9.2", "pyvista>=0.43", "pyvistaqt>=0.11"]
meshing = ["gmsh>=4.11", "meshio>=5.3"]
cad-import = ["ifcopenshell>=0.8", "cadquery-ocp>=7.7"]
gpu = ["warp-lang"]
dev = ["pytest>=8"]

[project.scripts]
geoai-simkit = "geoai_simkit.cli:main"
geoai-simkit-gui = "geoai_simkit.app.launcher_entry:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "fast: dependency-light tests",
  "solver: solver and benchmark tests",
  "gui: GUI contract tests",
  "slow: long-running engineering smoke tests",
  "gpu: CUDA/Warp tests",
  "meshing: gmsh/meshio tests",
]
